day09 part2 is solved. Most ugly code ever. Need to hard code some size limitation, to be executable in reasonable time, also need to run it with 12g memory at least since the grid takes about 10g memory to build. but all in all, it was just enough to get the puzzle solution! cant believe it! amazing