@@ -1,3 +1,5 @@
+import java.io.BufferedWriter;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.util.List;
 
@@ -12,13 +14,18 @@ public class Main {
             
             // Find the closest pairs and then build the connections
             List<Rectangle> rectangles = Day09Util.findRectangles(points);
-            
-            long answerPart1 = rectangles.getLast().getSize();
-            //int answerPart2 = Day09Util.calculateAnswer2(closestPairs.get(closingconnection-1));
+            long answerPart1 = rectangles.get(rectangles.size() - 1).getSize();
 
-            // Output the results
             System.out.println("The answer for Part 1 is: " + answerPart1);     
-            //System.out.println("The answer for Part 2 is: " + answerPart2);
+
+            // For part 2
+            boolean[][] grid = Day09Util.buildGrid(points, 100000, 100000);
+            //Day09Util.printGrid(grid);
+            rectangles = Day09Util.findRectanglesPart2(points, grid);
+            long answerPart2 = rectangles.get(rectangles.size() - 1).getSize();
+            //Day09Util.printGrid(grid);
+            // Output the results
+            System.out.println("The answer for Part 2 is: " + answerPart2);
         } catch (IOException e) {
             System.err.println("Erreur lors de la lecture du fichier : " + e.getMessage());
         }
